sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: type int
  var i : int
          ^AlgBubbleSort1:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i : int
      ^AlgBubbleSort1:3: error: local variables must be initialized
  var i : int
      ^AlgBubbleSort1:7: error: reassignment to val
      i = 0
        ^